--- a/frontend/cors-test.html
+++ b/frontend/cors-test.html
@@ -10,7 +10,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Test fetching videos endpoint
-            fetch('http://167.71.229.78:5000/api/videos?search=', {
+            fetch('https://eduub-ai.onrender.com/api/videos?search=', {
                 method: 'GET',
                 headers: {
                     'Content-Type': 'application/json',
